# ontu-schedule-bot-admin

./: .gitignore  .pdm-python  Dockerfile  README.md  example.env  install.sh  make_migrations.sh  pyproject.toml  requirements.txt  run_lint.ps1  update_requirements.sh  update_reuiqrements.bat
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release-docker.yml
admin_site/: manage.py  run_server.bat  run_server.sh
admin_site/admin_site/: asgi.py  settings.py  urls.py  views.py  wsgi.py
admin_site/admin_site/templates/: base.html
admin_site/admin_site_database/: admin.py  apps.py  decorators.py  models.py  operations.py  utils.py
admin_site/admin_site_database/admin_sites/: __init__.py  base.py  department.py  faculty.py  group.py  message_campaign.py  subscription.py  teacher.py  teachers_schedule_cache.py  telegram_chat.py
admin_site/admin_site_database/db/: __init__.py  base.py  faculty_manager.py  group_manger.py  settings_manager.py  subscription_manager.py  telegram_chat_manager.py
admin_site/admin_site_database/management/commands/: load_departments.py  load_faculties.py  load_groups.py  load_teachers.py
admin_site/admin_site_database/migrations/: 0001_initial.py  0002_messagecampaign.py  0003_department_teacher_teacherschedulecache.py  0004_subscription_teacher_alter_subscription_group.py  0005_telegramchat_if_forum_telegramchat_topic_id.py  0006_rename_if_forum_telegramchat_is_forum.py  0007_teacher_departments.py  0008_alter_group_options.py
admin_site/admin_site_database/model_files/: __init__.py  base.py  department.py  faculty.py  group.py  message_campaign.py  settings.py  subscription.py  teacher.py  teachers_schedule_cache.py  telegram_chat.py
admin_site/admin_site_endpoints/: admin.py  apps.py  models.py  operations.py  urls.py  views.py
admin_site/admin_site_endpoints/migrations/: 0001_initial.py  0002_alter_schedulecache_schedule.py
admin_site/admin_site_endpoints/serializers/: chat.py  schedule.py
admin_site/admin_site_endpoints/views/: BaseAPIView.py  BatchScheduleView.py  ChatCreateView.py  ChatInfoView.py  ChatUpdateView.py  ChatsAllView.py  FacultiesGetView.py  GroupsGetView.py  MessageCampaignView.py  ResetCacheView.py  ResetTeachersCacheView.py  ScheduleGetView.py  TeachersDepartmentView.py  TeachersDepartmentsView.py  TeachersScheduleView.py  UpdateNotbotView.py  __init__.py
ontu_schedule_admin/: manage.py
ontu_schedule_admin/main/: enums.py
ontu_schedule_admin/main/admin/: __init__.py  api_user.py  base.py  chat.py  department.py  faculty.py  group.py  message_campaign.py  subscription.py  teacher.py
ontu_schedule_admin/main/migrations/: 0001_initial.py  0002_alter_chat_uuid_alter_department_uuid_and_more.py  0003_alter_chat_uuid_alter_department_uuid_and_more.py  0004_apiuser.py  0005_chat_main_chat_platfor_451de3_idx.py  0006_faculty_parent_prefix.py  0007_remove_faculty_parent_prefix_faculty_parent.py
ontu_schedule_admin/main/models/: __init__.py  api_user.py  base.py  chat.py  department.py  faculty.py  group.py  message_campaign.py  schedule_entity.py  subscription.py  teacher.py
ontu_schedule_admin/main/operations/: department.py  faculty.py  group.py  schedule.py  subscription.py  teacher.py
ontu_schedule_admin/ontu_schedule_admin/: asgi.py  config.py  settings.py  urls.py  wsgi.py
ontu_schedule_admin/ontu_schedule_admin/api/: app.py  auth.py  decorators.py
ontu_schedule_admin/ontu_schedule_admin/api/endpoints/: __init__.py
ontu_schedule_admin/ontu_schedule_admin/api/schemas/: auth.py  base.py  chat.py  department.py  faculty.py  grop.py  message_campaign.py  schedule.py  subscription.py  teacher.py
ontu_schedule_admin/ontu_schedule_admin/api/serializers/: chat.py  department.py  faculty.py  group.py  message_campaign.py  teacher.py
ontu_schedule_admin/ontu_schedule_admin/api/utils/: log.py
(+21 files in other folders)
